Use a configuration builder pattern (squash me)